save final data

--- a/code.ipynb
+++ b/code.ipynb
@@ -4030,6 +4030,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5940cc81",
+   "metadata": {},
+   "source": [
+    "درصد ستون های bool............................................................................................................................................................"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 63,
    "id": "6d53ab71",
@@ -4037,14 +4045,6 @@
    "outputs": [],
    "source": [
     "bool_cols = ['is_incredible', 'is_promotion', 'is_locked_for_digiplus', 'bnpl_active', 'is_plus_early_access']\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5940cc81",
-   "metadata": {},
-   "source": [
-    "درصد ستون های bool............................................................................................................................................................"
    ]
   },
   {
@@ -4356,18 +4356,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "7e8172df",
+   "execution_count": 75,
+   "id": "3e1736fb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_clean4.to_excel('Digikala_Clean_Final.xlsx', index=False)\n"
+    "bool_cols = ['is_incredible', 'is_promotion', 'is_locked_for_digiplus', 'bnpl_active', 'is_plus_early_access','has_true_to_size','is_fast_shipping','is_ship_by_seller','free_shipping_badge','is_multi_warehouse','is_fake','has_gift','is_non_inventory','is_ad','is_jet_eligible','is_medical_supplement','has_printed_price']\n",
+    "\n",
+    "for col in bool_cols:\n",
+    "    df_clean4[col + '_num'] = df_clean4[col].astype(int)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "09761a53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clean5= df_clean4.copy(deep=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e1736fb",
+   "id": "632c6855",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                      ستون  تعداد نال نوع داده\n",
+      "0                    model       5762   object\n",
+      "1                 capacity       5724   object\n",
+      "2                      ram       5817   object\n",
+      "3                sim_cards       5985   object\n",
+      "4  min_price_in_last_month          1  float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "null_info = df_clean5.isnull().sum()\n",
+    "null_info = null_info[null_info > 0]\n",
+    "\n",
+    "\n",
+    "null_df = pd.DataFrame({\n",
+    "    'ستون': null_info.index,\n",
+    "    'تعداد نال': null_info.values,\n",
+    "    'نوع داده': [df_clean5[col].dtype for col in null_info.index]\n",
+    "})\n",
+    "\n",
+    "\n",
+    "print(null_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "f349f95e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fill_values = {\n",
+    "    'model': 'غیر مرتبط',\n",
+    "    'capacity': 'غیر مرتبط',\n",
+    "    'ram': 'غیر مرتبط',\n",
+    "    'sim_cards': 'غیر مرتبط',\n",
+    "    'min_price_in_last_month': 'نامشخص'\n",
+    "}\n",
+    "\n",
+    "df_clean5.fillna(value=fill_values, inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "7e8172df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clean5.to_excel('Digikala_Clean_Final.xlsx', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94f0f85d",
    "metadata": {},
    "outputs": [],
    "source": []
